Fixed some spacing

--- a/src/Components/AboutMe.css
+++ b/src/Components/AboutMe.css
@@ -20,6 +20,7 @@
 	font-size: 3.5rem;
 	font-family: "Shrikhand", cursive;
 	font-weight: 400;
+	padding-bottom: 1rem;
 }
 
 .aboutme-ppg {
